tests/errors/match_else_not_last.vir
// MatchCoverage: `else` arm followed by another `case`.

mod ElseNotLast {
    incoming x : Word[8] async

    outgoing out : Bit async

    // CHECK: else arm must be the last arm of the match
    out := match x {
        case 0 => true
        else   => false
        case 1 => true
    }
}

// CHECK: Check failed
